added function for submit field to be posted into DB

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,8 +23,8 @@
 
 <form id = "add-burger" class="mb-3">
 <div class = "form-group">
-  <label for="burger-name" class="form-label">Add a Burger: </label>
-  <textarea class="form-control" rows="3"></textarea>
+  <label for="burger-title" class="form-label">Add a Burger: </label>
+  <textarea class="form-control" id = "burger-name" rows="3"></textarea>
   <button id = "submit-burger" type="submit" class="btn btn-primary">Submit</button>
 </div>
 </form>
