--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,11 @@
 		<script src="/assets/js/burger.js"></script>
 	</head>
 	<body>
+	<header>
+		<h1>Eat-Da-Burger</h1>
+	</header>
+	<img id = "mainimage" src = "/assets/img/burgerclipart2.png" class="img-fluid" alt="burger picture">		
+	<br>
 		{{{ body }}}
 	</body>
 </html>
