edited CSS file with button colors and alignment

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
   {{this.id}}. {{this.burger_name}}
 
-    <button type = "button" class="devour-burger btn btn-success" data-id="{{id}}" data-newdevour="{{devoured}}">
-        {{#if devoured}}EAT-Da-Burger!{{else}}THROW UP BURGER!{{/if}}
+    <button type = "button" class="devour-burger btn btn-danger" data-id="{{id}}" data-newdevour="{{devoured}}">
+        {{#if devoured}}Devour it!{{else}}THROW UP BURGER!{{/if}}
     </button>
 
   
