--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,77 +15,67 @@ h1 {
     text-align: center;
 }
 
-/* .container {
-    display: flex;
-} */
-
 #mainimage{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
 }
-/* 
-#container-fluid {
-    background-color: blueviolet;
-} */
 
 .floatleft{
     float:right;
 }
 
  #noteaten{
-    float: left;
-    /* text-align: right; */
-    /* position: absolute; */
-    /* right: 400px; */
-    /* clear: right; */
-    /* margin: 0 1%;     */
-    /* width: 50%; */
-    /* background-color: darkgoldenrod; */
-    /* align-items: right; */
-    /* margin-left: auto;
-    margin-right: auto; */
+    float: left;  
 } 
 
-/* .floatright{
-    float:left;
-} */
-
-#eaten{
-    /* clear: right; */
+#eaten{    
     float: right;
-    text-align: center;
-    /* margin: 0 1.5%; */
-    /* margin-right: 25px;  */
-     /* width: 50%;     */
-     /* background-color: chartreuse; */
-     /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* margin-left: 6x; */
+    text-align: center;    
 } 
 
-#searcharea{
-    /* background-color: darkmagenta; */
-    /* display: block; */
-    /* overflow: auto; */
+#searcharea{    
     margin-left: auto;
     margin-right: auto;
 }
 
-.test{
+.tableburger{
     list-style-type: none;
     padding: 0;
     border: 1px solid #ddd;
     margin-right: 6px;        
 }
 
-.test li {
+.tableburger li {
     padding: 16px 24px;
     border-bottom: 1px solid #ddd;
     background-color: whitesmoke;
 }
 
-.test li:last-child {
+.tableburger li:last-child {
     border-bottom:none;
+}
+
+.trashburger{
+    list-style-type: none;
+    padding: 0;
+    border: 1px solid #ddd;
+    margin-right: 6px;  
+    width: 50%;      
+}
+
+.trashburger li {
+    padding: 4px 8px;
+    border-bottom: 1px solid #ddd;
+    background-color: whitesmoke;    
+}
+
+.trashburger li:last-child {
+    border-bottom:none;
+}
+
+#buttonContainer{
+    margin-top: 5px;
+    text-align: center;
 }
