--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div id = "container-fluid">
     <div id = "row">        
         <div id = "noteaten" class = "col-md-6">
-            <ul class = "test floatleft">
+            <ul class = "tableburger floatleft">
             {{#each burgers}}
             {{#unless devoured}}            
                 <li>
@@ -14,12 +14,12 @@
           
         <div id = "eaten" class = "col-md-6">
             <div class = "col-md-6">              
-                <ul class = "test">     
+                <ul class = "trashburger text-muted">     
                 {{#each burgers}}
                 {{#if devoured}}               
                     <li>
-                        {{> burgers/burger-block devoured=false}}  
-                        {{!-- this.burger_name --}}
+                        {{!-- {{> burgers/burger-block devoured=false --}}   
+                         {{this.id}}. {{this.burger_name}}
                     </li>
                 {{/if}}
                 {{/each}}
@@ -33,7 +33,10 @@
                 <div class = "form-group">
                 {{!-- <label for="burger-title" class="form-label">Add a Burger:</label> --}}
                 <textarea class="form-control" id = "burger-name" placeholder = "Add a burger here!"rows="3"></textarea>
+                <div id = "buttonContainer">
+                
                 <button id = "submit-burger" type="submit" class="btn btn-primary">Submit</button>
+                </div>
                 </div>
             </form>
         </div>
